--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,33 @@
 .main {
     width: 75%;
     background: url("./assets/bg.jpg") center;
+    display: flex;
+    flex-direction: column;
+}
+
+.top {
+    height: 50%;
+    position: relative;
+}
+
+.timer {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 5px solid white; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 10px;
+    left: 80px; 
+}
+
+.bottom {
+    height: 50%;
+
 }
 
 .pyramid {
