--- a/src/app.css
+++ b/src/app.css
@@ -1,203 +1,201 @@
 .app {
     height: 100vh;
     display: flex;
-    background: #020230;
     color: white;
-}
-
-.main {
+    background-color: #020230;
+  }
+  
+  .main {
     width: 75%;
-    background: url("./assets/bg.jpg") center;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230),
+      url("https://i.ytimg.com/vi/yQbJRGs0fy8/maxresdefault.jpg") center;
     display: flex;
     flex-direction: column;
-}
-
-.top {
-    height: 50%;
-    position: relative;
-}
-
-.timer {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    border: 5px solid white; 
+  }
+  
+  .pyramid {
+    width: 25%;
+    background-color: #020230;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 30px;
-    font-weight: 700;
+  }
+  
+  .moneyList {
+    padding: 20px;
+    list-style: none;
+    width: 100%;
+  }
+  
+  .moneyListItem {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  
+  .moneyListItem.active {
+    background-color: teal;
+  }
+  
+  .moneyListItemNumber {
+    width: 30%;
+    font-size: 18px;
+    font-weight: 100;
+  }
+  
+  .moneyListItemAmount {
+    font-size: 20px;
+    font-weight: 300;
+  }
+  
+  .top {
+    height: 50%;
+    position: relative;
+  }
+  
+  .timer {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 5px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     bottom: 10px;
-    left: 80px; 
-}
-
-.bottom {
+    left: 80px;
+    font-size: 30px;
+    font-weight: 700;
+  }
+  
+  .bottom {
     height: 50%;
-
-}
-
-/* Questions */
-.trivia {
+  }
+  
+  .trivia {
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-}
-
-.question {
+  }
+  
+  .question {
     width: 80%;
     background: linear-gradient(#100241, black);
-    border: 2px solid white;
     text-align: center;
     padding: 20px;
     border-radius: 10px;
+    border: 2px solid white;
     font-size: 20px;
-}
-
-.answers {
- width: 100%;
- display: flex;
- justify-content: center;
-flex-wrap: wrap;
-}
-
-.answer {
+  }
+  
+  .answers {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .answer {
     width: 40%;
     padding: 10px;
+    margin: 0 10px 20px 10px;
     text-align: center;
     background: linear-gradient(#0e0124, #22074d);
     border: 1px solid white;
     border-radius: 15px;
-    font-size: 20px; 
     font-weight: 300;
-    margin: 0 10px 20px 10px;
-    cursor: pointer;
-}
-
-.answer:hover, 
-.answer.active {
-    background: mediumblue;
-}
-
-/* Correct Answer */
-.answer.correct{
-    animation: correct 3s ease forwards;
-}
-
-@keyframes correct {
-    0%,
-    22%,
-    42% {
-        background: mediumblue;
-    }
-    20%,
-    40%,
-    60% {
-        background: linear-gradient(#0e0124, #22074d);
-    }
-    62%,
-    100% {
-        background: green;
-    }
-}
-
-/* Wrong Answer */
-.answer.wrong{
-    animation: correct 3s ease forwards;
-}
-
-@keyframes correct {
-    0%,
-    22%,
-    42% {
-        background: mediumblue;
-    }
-    20%,
-    40%,
-    60% {
-        background: linear-gradient(#0e0124, #22074d);
-    }
-    62%,
-    100% {
-        background: red;
-    }
-}
-/* SideBar */
-.pyramid {
-    width: 25%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-}
-
-.moneyList {
-    list-style: none;
-    width: 100%;
-    padding: 20px;
-}
-
-.moneyListItem {
-    display: flex;
-    align-items: center;
-    padding: 5px; 
-    border-radius: 5px;
-}
-
-.moneyListItem.active {
-    background-color: teal;
-}
-
-.moneyListItemNumber {
-    font-size: 18px;
-    font-weight: 100;
-    width: 30%;
-}
-
-.moneyListItemAmount {
     font-size: 20px;
-    font-weight: 300;
-}
-
-/* Center text when game stops */
-.endText {
+    cursor: pointer;
+  }
+  
+  .answer:hover,
+  .answer.active {
+    background: mediumblue;
+  }
+  
+  .answer.correct {
+    animation: correct 3s ease forwards;
+  }
+  
+  @keyframes correct {
+    0%,
+    22%,
+    42% {
+      background: mediumblue;
+    }
+    20%,
+    40%,
+    60% {
+      background: linear-gradient(#0e0124, #22074d);
+    }
+    62%,
+    100% {
+      background: green;
+    }
+  }
+  
+  .answer.wrong {
+    animation: wrong 3s ease forwards;
+  }
+  
+  @keyframes wrong {
+    0%,
+    22%,
+    42% {
+      background: mediumblue;
+    }
+    20%,
+    40%,
+    60% {
+      background: linear-gradient(#0e0124, #22074d);
+    }
+    62%,
+    100% {
+      background: crimson;
+    }
+  }
+  
+  .endText {
     position: relative;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-}
-
-.start {
+  }
+  
+  .start {
     width: 250px;
     height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     position: relative;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-    justify-content: space-around;
-}
-
-.startInput {
+  }
+  
+  .startInput {
     width: 100%;
     height: 30px;
     border: none;
     border-radius: 5px;
     text-align: center;
     font-size: 18px;
-}
-
-.startInput:focus {
+  }
+  
+  .startInput:focus {
     outline: none;
-}
-.startButton {
+  }
+  
+  .startButton {
     width: 100%;
     height: 30px;
     border: none;
@@ -205,4 +203,4 @@ flex-wrap: wrap;
     cursor: pointer;
     font-size: 18px;
     font-weight: 500;
-}
+  }
